--- a/client/index.html
+++ b/client/index.html
@@ -5,6 +5,6 @@
         <link rel="stylesheet" href="assets/styles/main.css">
     </head>
     <body>
-      <p>Hello World!!!!!!!!!!</p>
+      <p>Hello World!</p>
     </body>
 </html>
