(feat) Replace custom index module with gulp-inject

--- a/client/index.html
+++ b/client/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <link rel="stylesheet" href="assets/styles/main.css">
+<!-- inject:css -->
+<!-- endinject -->
     </head>
     <body>
       <p>Hello World!</p>
+<!-- inject:js -->
+<!-- endinject -->
     </body>
 </html>
