(fix) Make sure BrowserSync detects changes to JS source

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,10 @@
     <!-- endinject -->
   </head>
   <body>
-    <p>Hello World!</p>
+    <p>Hello World!!!!</p>
+    <p>Hello World!!!!</p>
+    <p>Hello World!!!!</p>
+    <p>Hello World!!!!</p>
     <!-- inject:js -->
     <!-- endinject -->
   </body>
