(feat) Add support for Angular JS development

--- a/client/index.html
+++ b/client/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="cd-app">
   <head>
     <meta charset="utf-8">
     <!-- inject:css -->
     <!-- endinject -->
   </head>
-  <body>
+  <body ng-controller="appCtrl">
     <p>Hello World!!!!</p>
     <p>Hello World!!!!</p>
 
