(feat) Add Angular UI routing for App and Login modules

--- a/client/index.html
+++ b/client/index.html
@@ -7,7 +7,7 @@
   </head>
   <body ng-controller="appCtrl">
     <p>Hello World!!!!</p>
-    <p>Hello World!!!!</p>
+    <div ui-view></div>
 
     <!-- inject:js -->
     <!-- endinject -->
