(fix) Trigger BrowserSync on edits to template HTML files

--- a/client/index.html
+++ b/client/index.html
@@ -6,7 +6,7 @@
     <!-- endinject -->
   </head>
   <body ng-controller="appCtrl">
-    <p>Hello World!!!!</p>
+    <h1>This is the root.</h1>
     <div ui-view></div>
 
     <!-- inject:js -->
