(feat) Create D3 Service to control client-side dependency order

--- a/client/app/graph/graph.tpl.html
+++ b/client/app/graph/graph.tpl.html
@@ -1,4 +1,5 @@
-<div class="graph">
+<!-- <div class="graph">
   <h2>This is the graph page!</h2>
   <svg id="canvas"><g/></svg>
-</div>
+</div> -->
+<graph-panel></graph-panel>
