--- a/client/app/graphpanel/graph.tpl.html
+++ b/client/app/graphpanel/graph.tpl.html
@@ -1,5 +1,2 @@
-<!-- <div class="graph">
-  <h2>This is the graph page!</h2>
-  <svg id="canvas"><g/></svg>
-</div> -->
+<h2>This is the graph page!</h2>'        
 <dagre-graph-panel></dagre-graph-panel>
