(feat) styled top bar and CONSTELLATION name, removed unnecessary div

--- a/client/index.html
+++ b/client/index.html
@@ -11,9 +11,8 @@
   </head>
   <body ng-controller="appCtrl">
     <div class="top">
-      Constellation
+      CONSTELLATION
     </div>
-    <div class="line">
       
     </div>
     <div ui-view></div>
