(feat) fix background image size, make CONSTELLATION an h1

--- a/client/index.html
+++ b/client/index.html
@@ -11,7 +11,7 @@
   </head>
   <body ng-controller="appCtrl">
     <div class="top">
-      CONSTELLATION
+      <h1>CONSTELLATION<h1/>
     </div>
       
     </div>
