(fix) remove extra closing script tag, fix indentation in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -31,7 +31,8 @@
         wf.async = 'true';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(wf, s);
-      })(); </script>
+      })(); 
+    </script>
 
     <script type="text/javascript">
       var WebFontConfig = {
@@ -46,7 +47,7 @@
         wf.async = 'true';
         var s = document.getElementsByTagName('script')[0];
         s.parentNode.insertBefore(wf, s);
-      })(); </script>
+      })(); 
     </script>
   </body>
 </html>
