(fix) remove unpaired closing div tag, fix background image behavior

--- a/client/index.html
+++ b/client/index.html
@@ -14,8 +14,7 @@
       <h1>CONSTELLATION<h1/>
     </div>
       
-    </div>
-    <div ui-view></div>
+    <div ui-view class="information">asdf</div>
     <!-- inject:js -->
     <!-- endinject -->
     <script type="text/javascript">
