(feat) styled information panel, added Sass variables and nesting

--- a/client/index.html
+++ b/client/index.html
@@ -14,7 +14,9 @@
       <h1>CONSTELLATION<h1/>
     </div>
       
-    <div ui-view class="information">asdf</div>
+    <div class="wrapper">
+      <div ui-view class="information">asdf</div>
+    </div>
     <!-- inject:js -->
     <!-- endinject -->
     <script type="text/javascript">
