--- a/client/index.html
+++ b/client/index.html
@@ -14,11 +14,16 @@
       <h1>CONSTELLATION<h1/>
     </div>
       
-      <div ui-view class="information">asdf</div>
+    <div class="wrapper">
+      <div ui-view="graphpanel"></div>
+      <div ui-view="infopanel" class="information">
+        <p>asdf</p>
+      </div>
+    </div>
     <!-- inject:js -->
     <!-- endinject -->
     <script type="text/javascript">
-      WebFontConfig = {
+      var WebFontConfig = {
         google: { families: [ 'Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700:latin' ] }
       };
       (function() {
