(refactor) Change controller references according to best practices

--- a/client/index.html
+++ b/client/index.html
@@ -9,7 +9,7 @@
       rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
   </head>
-  <body ng-controller="appCtrl">
+  <body ng-controller="AppController">
     <div class="top">
       <h1>CONSTELLATION<h1/>
     </div>
