(feat) change way fonts are applied to speed up page, and change fonts

--- a/client/index.html
+++ b/client/index.html
@@ -4,14 +4,11 @@
     <meta charset="utf-8">
     <!-- inject:css -->
     <!-- endinject -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic," + 
-      "400italic,600italic,700italic,400,300,600,700" 
-      rel='stylesheet' type='text/css'>
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono|Muli:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
   </head>
   <body ng-controller="AppController">
     <div class="top">
-      <h1>CONSTELLATION<h1/>
+      <h1>Constellation<h1/>
     </div>
       
     <div class="wrapper">
@@ -22,36 +19,5 @@
     </div>
     <!-- inject:js -->
     <!-- endinject -->
-    <script type="text/javascript">
-      var WebFontConfig = {
-        google: { families: [ 'Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700:latin' ] }
-      };
-      (function() {
-        'use strict';
-        var wf = document.createElement('script');
-        wf.src = ('https:' === document.location.protocol ? 'https' : 'http') +
-          '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-        wf.type = 'text/javascript';
-        wf.async = 'true';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(wf, s);
-      })(); 
-    </script>
-
-    <script type="text/javascript">
-      var WebFontConfig = {
-        google: { families: [ 'Cousine:400,700:latin' ] }
-      };
-     (function() {
-       'use strict';
-        var wf = document.createElement('script');
-        wf.src = ('https:' === document.location.protocol ? 'https' : 'http') +
-          '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-        wf.type = 'text/javascript';
-        wf.async = 'true';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(wf, s);
-      })(); 
-    </script>
   </body>
 </html>
