(refactor) Extract html code fromdagre directive to a new controller

--- a/client/app/infopanel/info-panel.tpl.html
+++ b/client/app/infopanel/info-panel.tpl.html
@@ -1,3 +1,23 @@
 <div class="info-panel">
-  <p>This is the info panel Angular module.</p>
+  <h3>
+    Name: {{displayId}}
+  </h3>
+  <h3>
+    Title: {{displayTitle}}
+  </h3>
+  <h4>
+    Description: {{displayDescription}}
+  </h4>
+  <h4>
+    Status: {{displayState}}
+  </h4>
+  <h4>
+    Assignee: {{displayAssignee}}
+  </h4>
+  <h4>
+    Total issue: {{displayCount}}
+  </h4>
+  <h4>
+    Status: {{displayComplete}} %
+  </h4>
 </div>
