(fix) Add class="graphpanel" to the graph panel in index.html

--- a/client/index.html
+++ b/client/index.html
@@ -12,7 +12,7 @@
     </div>
       
     <div class="wrapper">
-      <div ui-view="graphpanel"></div>
+      <div ui-view="graphpanel" class="graphpanel"></div>
       <div ui-view="infopanel" class="information">
       </div>
     </div>
