--- a/client/index.html
+++ b/client/index.html
@@ -15,6 +15,8 @@
       <div ui-view="graphpanel" class="graphpanel"></div>
       <div ui-view="infopanel" class="information">
       </div>
+      <div ui-view="queuepanel" class="queue">
+      </div>
     </div>
     <!-- inject:js -->
     <!-- endinject -->
