--- a/client/app/infopanel/info-panel.tpl.html
+++ b/client/app/infopanel/info-panel.tpl.html
@@ -1,36 +1,40 @@
 <div class="info-panel">
   <div ng-show = "!display">
     <h3>
-      {{displayId}} {{displayTitle}}
+      #[issue number] [Issue title]{{displayId}} {{displayTitle}}
     </h3>
     <h4>
-      {{displayState}}
+      [Open/closed]{{displayState}}
     </h4>
      <h4 ng-repeat="label in displayIssuetype">
-      {{label}}
+      [label list] {{label}}
     </h4>
     <h4>
-      {{displayAssignee}}
+      [Assignee] {{displayAssignee}}
     </h4>
-    <h4>
+    <hr>
+    <p>
       {{displayDescription}}
-    </h4>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+    </p>
   </div>
   <div ng-show = "display">
     <h3>
       Name: {{displayId}}
     </h3>
     <h3>
-      {{displayTitle}}
+      [Cluster Title Goes Here] {{displayTitle}}
     </h3>
     <h4>
+      [Total issues:] {{displayCount}}
+    </h4>
+    <h4>
+      [5/8] {{displayComplete}}/{{displayCount}}
+    </h4>
+    <hr>
+    <p>
       {{displayDescription}}
-    </h4>
-    <h4>
-      Total issues: {{displayCount}}
-    </h4>
-    <h4>
-      {{displayComplete}}/{{displayCount}}
-    </h4>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum
+    </p>
   </div>
 </div>
