--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <!-- inject:css -->
     <!-- endinject -->
-    <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono|Muli:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Ubuntu+Mono|Muli:300,400,300italic,400italic' rel='stylesheet' type='text/css'>
   </head>
   <body ng-controller="AppController">
     <div class="top">
