--- a/client/app/infopanel/info-panel.tpl.html
+++ b/client/app/infopanel/info-panel.tpl.html
@@ -1,4 +1,4 @@
-<div class="info-panel">
+<div class="info-panel" ng-show="showInfo">
   <div ng-show = "!display">
     <h3>
       Issue #{{displayId}}: {{displayTitle}}
