--- a/client/app/formpanel/form-panel.tpl.html
+++ b/client/app/formpanel/form-panel.tpl.html
@@ -1,46 +1,24 @@
 <form name="nodeform" novalidate>
   <div ng-show="showCluster"> 
-<!--     <div ng-dropdown-multiselect="" options="abbrevList" selected-model="list" checkboxes="true"></div> -->
     <fieldset>
-          <input type="text" name="abbrev" ng-model="displayObj.cluster.abbrev"/>
-          <input type="text" name="name" ng-model="displayObj.cluster.name"/>
-          <input type="text" name="description" ng-model="displayObj.cluster.description"/>
-          
-          <select multiple type="text" name="dependancy" ng-model="abbrevList" ng-options="obj.key for obj in abbrevList" required="" ng-click="selectItem()">
-          <pre>{{abbrevList | json}}</pre>
-          <!-- <option value="">Select Predessor</option> -->
-          </select>
+      <input type="text" name="abbrev" ng-model="displayObj.cluster.abbrev"/>
+      <input type="text" name="name" ng-model="displayObj.cluster.name"/>
+      <input type="text" name="description" ng-model="displayObj.cluster.description"/>
+      <select multiple type="text" name="dependancy" ng-model="abbrevList" ng-options="obj.key for obj in abbrevList" required="" ng-click="selectItem()">
+      <!-- <option value="">Select Predessor</option> -->
+      </select>
     </fieldset>
   </div> 
   <div ng-show="!showCluster">
+    <fieldset>
+      <input type="text" name="id" ng-model="displayObj.issue.number_github"/>
+      <input type="text" name="name" ng-model="displayObj.issue.title"/>
+      <input type="text" name="description" ng-model="displayObj.issue.body"/>
+      <select multiple type="text" name="dependancy" ng-model="abbrevList" ng-options="obj.key for obj in abbrevList" required="" ng-click="selectItem()">
+      <!-- <option value="">Select Predessor</option> -->
+      </select>
+    </fieldset>
   </div>
-
-  
-<!--   <div class="form-group">
-    <label>Name</label>
-    <input type="text" name="name" class="form-control" ng-model="name">
-  </div>
-  <div class="form-group">
-    <label>Description</label>
-    <input type="text" name="name" class="form-control" ng-model="description">
-  </div>
-  <div class="form-group">
-    <label>Assignee</label>
-    <input type="text" name="name" class="form-control" ng-model="assignee">
-  </div> -->
-<!--   <fieldset class="form-group">
-    <select type="text" name="name" class="form-control" ng-model="node.upstreams" ng-options="node for node in predecessor">
-      <option value="">Select Predessor</option>
-    </select>
-  </fieldset> -->
-  <!-- <div class="form-group">
-    <label>Dependency</label>
-    <input type="text" name="name" class="form-control" ng-model="dependency">
-  </div>
-  <div class="form-group">
-    <label>Status</label>
-    <input type="text" name="name" class="form-control" ng-model="status">
-  </div> -->
   <input type="submit" class="btn" value="Save" ng-click="submit(id)"/>
   <input type="submit" class="btn" value="Cancel" ng-click="cancel()"/>
 </form>
