(fix) Add additional CSS styling and minor template changes.

--- a/client/app/infopanel/info-panel.tpl.html
+++ b/client/app/infopanel/info-panel.tpl.html
@@ -1,7 +1,7 @@
 <div class="info-panel" ng-show="showInfo">
   <div ng-show = "!display">
     <h3>
-      Issue #{{displayId}}: {{displayTitle}}
+      Issue {{displayId}}: {{displayTitle}}
     </h3>
     <h4>
       {{displayState}}
@@ -25,10 +25,10 @@
       {{displayTitle}}
     </h3>
     <h4>
-      {{displayCount}}
+      Total Nodes: {{displayCount}}
     </h4>
     <h4>
-      {{displayComplete}}/{{displayCount}}
+      State of completion: {{displayComplete}}/{{displayCount}}
     </h4>
 <!--     <ng-bar> </ng-bar>  -->
     <p>
