(feat) Add loading bar reflecting the status of the cluster

--- a/client/app/infopanel/info-panel.tpl.html
+++ b/client/app/infopanel/info-panel.tpl.html
@@ -25,12 +25,10 @@
       {{displayTitle}}
     </h3>
     <h4>
-      Total Nodes: {{displayCount}}
-    </h4>
-    <h4>
       State of completion: {{displayComplete}}/{{displayCount}}
     </h4>
-<!--     <ng-bar> </ng-bar>  -->
+    <ng-bar></ng-bar> 
+    <hr>
     <p>
       {{displayDescription}}
     </p>
